--- a/index.html
+++ b/index.html
@@ -211,100 +211,97 @@
     <div class="main-banner" id="top">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6 col-md-12">
-                    <div class="left-content">
-                        <div class="thumb">
-                            <div class="inner-content">
-                                <a href="index.html" class="logo">
-                                    <img src="assets/images/butikkoversikt_logo.png" alt="Butikkoversikt.no">
-                                </a>
-                                <h4>Det vil komme mange flere butikker og andre nyttige sider du kan besøke fremover</h4>
-                                <span>Men ta en titt på det som allerede er her</span>
-                            </div>
+                <div class="col-lg-6 col-md-12 left-content">
+                    <div class="thumb">
+                        <div class="inner-content">
+                            <a href="index.html" class="logo">
+                                <img src="assets/images/butikkoversikt_logo.png" alt="Butikkoversikt.no">
+                            </a>
+                            <h4>Det vil komme mange flere butikker og andre nyttige sider du kan besøke fremover</h4>
+                            <span>Men ta en titt på det som allerede er her</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="right-content">
-                        <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="right-first-image">
-                                    <div class="thumb">
-                                        <div class="inner-content">
+                <div class="col-lg-6 col-md-12 right-content">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="right-first-image">
+                                <div class="thumb">
+                                    <div class="inner-content">
+                                        <h4>Data og Elektronikk</h4>
+                                        <span>Best Products for Electronics</span>
+                                    </div>
+                                    <div class="hover-content">
+                                        <div class="inner">
                                             <h4>Data og Elektronikk</h4>
-                                            <span>Best Products for Electronics</span>
-                                        </div>
-                                        <div class="hover-content">
-                                            <div class="inner">
-                                                <h4>Data og Elektronikk</h4>
-                                                <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
-                                                <div class="main-border-button">
-                                                    <a href="data-og-elektronikk.html">Discover More</a>
-                                                </div>
+                                            <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
+                                            <div class="main-border-button">
+                                                <a href="data-og-elektronikk.html">Discover More</a>
                                             </div>
                                         </div>
-                                        <img src="assets/images/data-og-elektronikk/data-og-elektronikk_1.jpg">
                                     </div>
+                                    <img src="assets/images/data-og-elektronikk/data-og-elektronikk_1.jpg"
+                                        alt="Data og Elektronikk">
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="right-first-image">
-                                    <div class="thumb">
-                                        <div class="inner-content">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="right-first-image">
+                                <div class="thumb">
+                                    <div class="inner-content">
+                                        <h4>Klær og Mote</h4>
+                                        <span>Best Clothes For Men</span>
+                                    </div>
+                                    <div class="hover-content">
+                                        <div class="inner">
                                             <h4>Klær og Mote</h4>
-                                            <span>Best Clothes For Men</span>
-                                        </div>
-                                        <div class="hover-content">
-                                            <div class="inner">
-                                                <h4>Klær og Mote</h4>
-                                                <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
-                                                <div class="main-border-button">
-                                                    <a href="klær-og-mote.html">Discover More</a>
-                                                </div>
+                                            <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
+                                            <div class="main-border-button">
+                                                <a href="klær-og-mote.html">Discover More</a>
                                             </div>
                                         </div>
-                                        <img src="assets/images/baner-right-image-02.jpg">
                                     </div>
+                                    <img src="assets/images/baner-right-image-02.jpg" alt="Klær og Mote">
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="right-first-image">
-                                    <div class="thumb">
-                                        <div class="inner-content">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="right-first-image">
+                                <div class="thumb">
+                                    <div class="inner-content">
+                                        <h4>Barn</h4>
+                                        <span>Best Clothes For Kids</span>
+                                    </div>
+                                    <div class="hover-content">
+                                        <div class="inner">
                                             <h4>Barn</h4>
-                                            <span>Best Clothes For Kids</span>
-                                        </div>
-                                        <div class="hover-content">
-                                            <div class="inner">
-                                                <h4>Barn</h4>
-                                                <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
-                                                <div class="main-border-button">
-                                                    <a href="barn-og-baby.html">Discover More</a>
-                                                </div>
+                                            <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
+                                            <div class="main-border-button">
+                                                <a href="barn-og-baby.html">Discover More</a>
                                             </div>
                                         </div>
-                                        <img src="assets/images/baner-right-image-03.jpg">
                                     </div>
+                                    <img src="assets/images/baner-right-image-03.jpg" alt="Barn">
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="right-first-image">
-                                    <div class="thumb">
-                                        <div class="inner-content">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="right-first-image">
+                                <div class="thumb">
+                                    <div class="inner-content">
+                                        <h4>Hus og Hjem</h4>
+                                        <span>Best Trend Accessories</span>
+                                    </div>
+                                    <div class="hover-content">
+                                        <div class="inner">
                                             <h4>Hus og Hjem</h4>
-                                            <span>Best Trend Accessories</span>
-                                        </div>
-                                        <div class="hover-content">
-                                            <div class="inner">
-                                                <h4>Hus og Hjem</h4>
-                                                <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
-                                                <div class="main-border-button">
-                                                    <a href="hus-og-hjem.html">Discover More</a>
-                                                </div>
+                                            <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
+                                            <div class="main-border-button">
+                                                <a href="hus-og-hjem.html">Discover More</a>
                                             </div>
                                         </div>
-                                        <img src="assets/images/baner-right-image-04.jpg">
                                     </div>
+                                    <img src="assets/images/baner-right-image-04.jpg" alt="Hus og Hjem">
                                 </div>
                             </div>
                         </div>
