--- a/index.html
+++ b/index.html
@@ -119,11 +119,10 @@
                         </div>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Trigger Start ***** -->
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"      data-target="#navbarResponsive"
+                        aria-controls="navbarResponsive" aria-expanded="false"      aria-label="Toggle navigation">
+                             <span class="navbar-toggler-icon"></span>
+                    </button>
                         <!-- ***** Menu Trigger End ***** -->
                         <div class="collapse navbar-collapse" id="navbarResponsive">
                             <ul class="navbar-nav ml-auto">
